--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                     <li> Conclusiones</li>
                     </ol>
                 </nav>
+                <article>
+                    <h3>Introducción</h3>
+                    <p>Frente a la productividad tóxica y el agotamiento digital, esta tesis propone el movimiento corporal consciente como acto de resistencia para reconectar el cuerpo con la creatividad.</p>
+                </article>
             </section>
     </body>
 </html>
