--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
                     <h3>Introducción</h3>
                     <p>Frente a la productividad tóxica y el agotamiento digital, esta tesis propone el movimiento corporal consciente como acto de resistencia para reconectar el cuerpo con la creatividad.</p>
                     <h4> Contexto</h4>
+                    <img src="./img/burnout.jpg" alt="burnout">
                     <p>En el contexto de la sociedad pospandémica, caracterizada por la intensificación del teletrabajo, la erosión de los límites entre vida y laborales, y la crisis de agotamiento creativo bajo lógicas de rendimiento digital</p>
                     <h5>Metodología</h5>
+                    <img src="./img/mov1.jpg" alt="movimiento">
                     <p>Mediante una metodología de investigación-acción basada en derivas sensoriales, cartografías corporales y talleres de movimiento no productivo, esta tesis cocrea conocimientos con los participantes para diseñar colectivamente un protocolo de intervención somática.</p>
                 </article>
             </section>
