--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="https://use.typekit.net/nrh7dru.css">
+        <link rel="stylesheet" href="https://use.typekit.net/nrh7dru.css">
         <title>
             Cuerpo y movimiento en espacios de trabajo
     </title>
