--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>
             Cuerpo y movimiento en espacios de trabajo
     </title>
+    <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <h1 Cuerpo y movimiento de espacios de trabjo </h1>
