--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1 Cuerpo y movimiento de espacios de trabjo </h1>
+        <h1> Cuerpo y movimiento de espacios de trabajo </h1>
             <hr>
             <section>
                 <h2>Introducción</h2>
