--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <header>
+            
+        </header>
         <h1> Cuerpo y movimiento de espacios de trabajo </h1>
             <hr>
             <section>
