--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
     </head>
     <body>
         <header>
-            
+            <nav>
+                <ul>
+                    <li> a href ="index.html">Inicio</a></li>
+                    <li> a href ="#introduccion">Introducción</a></li>
+                    <li> a href ="#contexto">Contexto</a></li>
+                    <li> a href ="#metodologia">Metodología</a></li>
+                    <li> a href ="#resultados">Resultados</a></li>
+                    <li> a href ="#conclusiones">Conclusiones</a></li>
+                </ul>
+            </nav>
         </header>
         <h1> Cuerpo y movimiento de espacios de trabajo </h1>
             <hr>
