--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <header>
             <nav>
                 <ul>
-                    <li> a href ="index.html">Inicio</a></li>
-                    <li> a href ="#introduccion">Introducción</a></li>
-                    <li> a href ="#contexto">Contexto</a></li>
-                    <li> a href ="#metodologia">Metodología</a></li>
-                    <li> a href ="#resultados">Resultados</a></li>
-                    <li> a href ="#conclusiones">Conclusiones</a></li>
+                    <li> <a href ="index.html"> Inicio</a> </li>
+                    <li> <a href ="introduccion.html">Introducción</a> </li>
+                    <li> <a href ="contexto">Contexto</a></li>
+                    <li> <a href ="metodologia.html">Metodología</a></li>
+                    <li> <a href ="resultados.html">Resultados</a></li>
+                    <li> <a href ="conclusiones.html">Conclusiones</a></li>
                 </ul>
             </nav>
         </header>
