--- a/layout.html
+++ b/layout.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.typekit.net/nrh7dru.css">
+    <link rel="stylesheet" href="https://use.typekit.net/nrh7dru.css">
     <title>Layout Tesis</title>
+    <link rel="stylesheet" href="./csslayout.css" 
 </head>
 <body>
     <header>
