--- a/layout.html
+++ b/layout.html
@@ -6,15 +6,15 @@
     <link rel="stylesheet" href="https://use.typekit.net/nrh7dru.css">
     <link rel="stylesheet" href="https://use.typekit.net/nrh7dru.css">
     <title>Layout Tesis</title>
-    <link rel="stylesheet" href="./csslayout.css" 
+    <link rel="stylesheet" href="./css/layout.css" 
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a class="nav-link" tile="Ir a Home" href="#">Home</a></li>
+                <li><a class="nav-link" tile="Acerca de" href="#">About</a></li>
+                <li><a class="nav-link" tile="Contáctanos" href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
