--- a/layout.html
+++ b/layout.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/nrh7dru.css">
     <link rel="stylesheet" href="https://use.typekit.net/nrh7dru.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <title>Layout Tesis</title>
     <link rel="stylesheet" href="./css/layout.css" 
 </head>
 <body>
-    <header>
+    <header class="container">
         <nav>
             <ul>
                 <li><a class="nav-link" tile="Ir a Home" href="#">Home</a></li>
@@ -18,11 +19,25 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>Tesis </h1>
+    <main class="container">
+        <div class="row">
+            <section class="twelve columns"> 
+                </section>
+            </div>
+            <div class="row">
+            <section class="six columns">
+                </section>
+                <section class="six columns">
+                </section>
+                <h1>Tesis </h1>
+                <p class="muted"> Proyecto web del bloque 1 </p>
+            </div>
+        </div>
     </main>
-    <footer>
+   
+    <footer class="container">
+        <p>lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
         <h2>Footer</h2>
     </footer>
 </body>
-</html>
+</html> 
